--- a/prichody.html
+++ b/prichody.html
@@ -220,9 +220,9 @@
       border: 2px solid #155520;
     }
     .pritomen-cell.agent {
-      background: #ffe066 !important;
-      color: #8a7200 !important;
-      border: 2px solid #b7a100 !important;
+      background: #1eec4e !important;
+      color: #002207 !important;
+      border: 2px solid #155520 !important;
     }
     .odchod-btn {
       background: #fff;
