--- a/prichody.html
+++ b/prichody.html
@@ -197,7 +197,7 @@
       box-sizing: border-box;
     }
     .zamestnanec-cell {
-      background: #ff4c4c;
+      background: #db4b3e;
       color: #fff;
       border-radius: 6px;
       padding: 7px 4px;
