--- a/prichody.html
+++ b/prichody.html
@@ -198,7 +198,7 @@
     }
     .zamestnanec-cell {
       background: #db4b3e;
-      color: #fff;
+      color: #F5CECB;
       border-radius: 6px;
       padding: 7px 4px;
       font-size: 13px;
