--- a/kal.html
+++ b/kal.html
@@ -2,45 +2,40 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Měsíční kalendář absencí z CSV</title>
+  <title>Měsíční kalendář absencí</title>
   <style>
     body { background: #F5F6FA; font-family: 'Open Sans', sans-serif; color: #2A2A2A; margin: 0; padding: 0;}
     h1 { text-align: center; color: #2A64AD; margin-top: 24px;}
     .center { max-width: 1200px; margin: 0 auto; padding: 30px 20px;}
     .upload-block {text-align: center; margin-bottom: 30px;}
-    .calendar { 
-      display: grid; 
-      grid-template-columns: repeat(7, 1fr); 
-      gap: 8px; 
-      background: #e6edfa; 
-      border-radius: 16px; 
-      padding: 20px;
-    }
+    .kalendare { display: flex; flex-wrap: wrap; gap: 32px; justify-content: center;}
+    .kalendar-wrap { background: #e6edfa; border-radius: 16px; box-shadow: 0 0 14px #c3cbe1; padding: 20px 26px 24px 26px; margin-bottom: 28px;}
+    .calendar { display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px;}
     .day-header { text-align: center; font-weight: bold; font-size: 18px; color: #2A64AD; margin-bottom: 5px;}
-    .cell { 
-      min-height: 120px; 
-      max-height: 120px; 
-      height: 120px;
-      background: white; 
-      border-radius: 10px; 
-      box-shadow: 0 0 6px #c3cbe1; 
-      padding: 6px 6px 3px 9px; 
-      position: relative; 
-      overflow-y: auto;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-    }
+    .cell { min-height: 120px; max-height: 120px; height: 120px; background: white; border-radius: 10px; box-shadow: 0 0 6px #c3cbe1; padding: 6px 6px 3px 9px; position: relative; overflow-y: auto; display: flex; flex-direction: column; justify-content: flex-start; }
     .cell .day-num { font-size: 18px; font-weight: bold; color: #444; margin-bottom: 4px;}
+    .names-list {margin: 3px 0 0 0; font-size: 13px;}
     .legend { margin: 32px 0 0 0; display: flex; gap: 35px; justify-content: center;}
     .legend-item { display: flex; align-items: center; gap: 7px; font-size: 15px;}
-    .abs-dov { background: #DB4B3E; color: white; padding: 0 5px; border-radius: 6px; }
-    .abs-pul { background: #E8B000; color: #2A2A2A; padding: 0 5px; border-radius: 6px;}
-    .abs-nem { background: #2A64AD; color: white; padding: 0 5px; border-radius: 6px;}
-    .abs-lek { background: #4DA86E; color: white; padding: 0 5px; border-radius: 6px;}
+    .abs-dov { background: #42B63A; color: white; padding: 0 5px; border-radius: 6px; }
+    .abs-pul { background: #b3e8b2; color: #2A2A2A; padding: 0 5px; border-radius: 6px;}
+    .abs-nem { background: #DB4B3E; color: white; padding: 0 5px; border-radius: 6px;}
+    .abs-lek { background: #0066b3; color: white; padding: 0 5px; border-radius: 6px;}
     .abs-ostatni { background: #9B59B6; color: white; padding: 0 5px; border-radius: 6px;}
-    .names-list {margin: 3px 0 0 0; font-size: 13px;}
+    .calendar-toolbar { display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px;}
+    .month-select {font-size: 16px; border-radius: 6px; border:1px solid #aac2e4; padding:4px 9px;}
+    .calendar-title {font-size: 23px; font-weight: bold; color: #2A64AD;}
+    .pdf-btn, .remove-btn, .print-btn { background:#2A64AD; color:white; border:none; border-radius:7px; font-size:15px; padding:7px 14px; margin-left: 7px; cursor:pointer;}
+    .remove-btn { background:#DB4B3E;}
+    .print-btn {background: #4DA86E;}
+    .pdf-btn:hover, .remove-btn:hover, .print-btn:hover { filter:brightness(1.13);}
+    .add-kalendar {background:#42B63A; color:white; border:none; border-radius:9px; font-size:17px; padding:10px 24px; margin:22px auto 30px auto; display:block; cursor:pointer; font-weight:bold;}
     @media (max-width:900px) {.calendar {font-size:12px; grid-template-columns: repeat(7, 1fr);}}
+    @media print {
+      body * { visibility: hidden; }
+      .print-area, .print-area * { visibility: visible !important;}
+      .print-area { position: absolute; left: 0; top: 0; width: 100vw; background: white;}
+    }
   </style>
 </head>
 <body>
@@ -49,57 +44,228 @@
     <div class="upload-block">
       <input type="file" id="csvInput" accept=".csv" />
       <br><br>
-      <span style="color:#888;">Nahraj svůj exportovaný CSV soubor...</span>
+      <span style="color:#888;">Nahraj CSV export a udělej si přehled... Kalendáře zůstanou uloženy v prohlížeči do přehrání dalším seznamem.</span>
     </div>
-    <div id="calendarContainer"></div>
-    <div class="legend">
-      <div class="legend-item"><span class="abs-dov">DOV</span> Dovolená</div>
-      <div class="legend-item"><span class="abs-pul">1/2 DOV</span> 1/2 dovolené</div>
-      <div class="legend-item"><span class="abs-nem">NEM</span> Nemocenská</div>
-      <div class="legend-item"><span class="abs-lek">LEK</span> Lékař</div>
-      <div class="legend-item"><span class="abs-ostatni">OST</span> Ostatní absence</div>
-    </div>
+    <button class="add-kalendar" onclick="addKalendar()">+ Přidat nový kalendář</button>
+    <div class="kalendare" id="kalendare"></div>
+    <template id="legend-template">
+      <div class="legend">
+        <div class="legend-item"><span class="abs-dov">DOV</span> Dovolená</div>
+        <div class="legend-item"><span class="abs-pul">D/2</span> 1/2 dovolené</div>
+        <div class="legend-item"><span class="abs-nem">NEM</span> Nemocenská</div>
+        <div class="legend-item"><span class="abs-lek">LEK</span> Lékař</div>
+        <div class="legend-item"><span class="abs-ostatni">OST</span> Ostatní absence</div>
+      </div>
+    </template>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script>
+    // Barvy a zkratky
     const absenceTypes = {
       'DOV':  { label: 'DOV',   cls: 'abs-dov', name: 'Dovolená' },
-      '1/2 DOV': { label: '1/2 DOV', cls: 'abs-pul', name: 'Půlden dovolené' },
+      'D/2':  { label: 'D/2',   cls: 'abs-pul', name: 'Půlden dovolené' },
       'NEM':  { label: 'NEM',   cls: 'abs-nem', name: 'Nemocenská' },
       'LEK':  { label: 'LEK',   cls: 'abs-lek', name: 'Lékař' }
     };
     function getAbsenceType(code) {
       code = (code || '').toUpperCase().replace(/\s+/g, '');
       if (code === 'DOV') return absenceTypes['DOV'];
-      if (code === '1/2DOV' || code === '1/2 DOV' || code === 'PULDOV') return absenceTypes['1/2 DOV'];
+      if (code === 'D/2' || code === '1/2DOV' || code === '1/2DOV' || code === 'PULDOV') return absenceTypes['D/2'];
       if (code === 'NEM') return absenceTypes['NEM'];
       if (code === 'LEK') return absenceTypes['LEK'];
       if (code && code !== 'SME' && code !== '-') return { label: code, cls: 'abs-ostatni', name: 'Ostatní' };
       return null;
     }
+    // CZ měsíce
+    const mesice = ["LEDEN","ÚNOR","BŘEZEN","DUBEN","KVĚTEN","ČERVEN","ČERVENEC","SRPEN","ZÁŘÍ","ŘÍJEN","LISTOPAD","PROSINEC"];
+
+    // LocalStorage - načíst kalendáře
+    window.addEventListener('DOMContentLoaded', () => {
+      let cache = localStorage.getItem("kalendarCache");
+      if (cache) {
+        let data = JSON.parse(cache);
+        data.forEach(obj => createKalendar(obj.data, obj.month, obj.year));
+      }
+    });
+
+    // Uložení do cache
+    function saveToCache() {
+      let cache = [];
+      document.querySelectorAll('.kalendar-wrap').forEach(el => {
+        let data = el.kalendarData; // v .kalendarData je původní rozparsované CSV!
+        let month = parseInt(el.querySelector('.month-select').value.split('-')[1]);
+        let year = parseInt(el.querySelector('.month-select').value.split('-')[0]);
+        cache.push({data, month, year});
+      });
+      localStorage.setItem("kalendarCache", JSON.stringify(cache));
+    }
+
+    // CSV import a inicializace
     document.getElementById('csvInput').addEventListener('change', function(e) {
       const file = e.target.files[0];
       if (!file) return;
       const reader = new FileReader();
       reader.onload = function(evt) {
         const text = evt.target.result;
-        renderCalendar(text);
+        let parsed = parseCSV(text);
+        // Default měsíc/rok (dnes)
+        let today = new Date();
+        let m = today.getMonth()+1, y = today.getFullYear();
+        addKalendar(parsed, y, m);
+        saveToCache();
       };
       reader.readAsText(file, 'windows-1250');
     });
-    function renderCalendar(csv) {
+
+    // Přidání kalendáře
+    function addKalendar(parsed, year, month) {
+      if (!parsed) parsed = {};
+      if (!month || !year) {
+        let d = new Date();
+        month = d.getMonth()+1;
+        year = d.getFullYear();
+      }
+      createKalendar(parsed, month, year);
+      saveToCache();
+    }
+
+    // Vytvoření jednoho kalendáře
+    function createKalendar(parsed, month, year) {
+      let kalendareDiv = document.getElementById('kalendare');
+      // HTML wrapper
+      let wrap = document.createElement('div');
+      wrap.className = 'kalendar-wrap';
+      wrap.kalendarData = parsed; // pro cache
+      // Toolbar s volbou měsíce/roku a tlačítky
+      let toolbar = document.createElement('div');
+      toolbar.className = "calendar-toolbar";
+      // Výběr měsíc/rok
+      let ms = document.createElement('select');
+      ms.className = "month-select";
+      let now = new Date();
+      for(let y = now.getFullYear()-1; y <= now.getFullYear()+1; y++) {
+        for(let m = 1; m <= 12; m++) {
+          let opt = document.createElement('option');
+          opt.value = `${y}-${m}`;
+          opt.innerText = `${mesice[m-1]} ${y.toString().slice(-2)}`;
+          if(y == year && m == month) opt.selected = true;
+          ms.appendChild(opt);
+        }
+      }
+      ms.addEventListener('change', () => { renderKalendar(wrap, parsed, parseInt(ms.value.split('-')[0]), parseInt(ms.value.split('-')[1])); saveToCache(); });
+      // Titulek
+      let calTitle = document.createElement('span');
+      calTitle.className = "calendar-title";
+      calTitle.innerText = `${mesice[month-1]} ${year.toString().slice(-2)}`;
+      // PDF a odebrat
+      let pdfBtn = document.createElement('button');
+      pdfBtn.className = "pdf-btn";
+      pdfBtn.innerText = "Export PDF";
+      pdfBtn.onclick = () => exportPDF(wrap, calTitle.innerText);
+      let printBtn = document.createElement('button');
+      printBtn.className = "print-btn";
+      printBtn.innerText = "Tisk kalendáře";
+      printBtn.onclick = () => printKalendar(wrap);
+      let removeBtn = document.createElement('button');
+      removeBtn.className = "remove-btn";
+      removeBtn.innerText = "Odebrat";
+      removeBtn.onclick = () => { wrap.remove(); saveToCache(); };
+      toolbar.appendChild(ms);
+      toolbar.appendChild(calTitle);
+      toolbar.appendChild(pdfBtn);
+      toolbar.appendChild(printBtn);
+      toolbar.appendChild(removeBtn);
+      wrap.appendChild(toolbar);
+      // Místo pro kalendář
+      let calendarArea = document.createElement('div');
+      calendarArea.className = "print-area";
+      wrap.appendChild(calendarArea);
+      // Legenda
+      wrap.appendChild(document.getElementById('legend-template').content.cloneNode(true));
+      // Vykreslit
+      kalendareDiv.appendChild(wrap);
+      renderKalendar(wrap, parsed, year, month);
+    }
+
+    // Samotné vykreslení kalendáře
+    function renderKalendar(wrap, parsed, year, month) {
+      let calendarArea = wrap.querySelector('.print-area');
+      calendarArea.innerHTML = "";
+      // CZ dny
+      const dnyTydne = ['Po','Út','St','Čt','Pá','So','Ne'];
+      // Kolik dní má měsíc
+      let days = new Date(year, month, 0).getDate();
+      // Načíst absenci pro daný měsíc
+      let data = {};
+      for(let i=1; i<=days; i++) data[i] = [];
+      // Vyber správné dny z parsed (je-li předáno)
+      if (parsed && parsed.data) {
+        // Mapování: v parsed je data[i]=[{jmeno, typ}], pro dny 1 až N
+        for(let i=1;i<=days;i++) {
+          if(parsed.data[i]) data[i] = parsed.data[i];
+        }
+      }
+      // Týden začíná v pondělí
+      let weekStart = (new Date(year, month-1, 1).getDay() + 6) % 7;
+      let calendarHtml = `<div class="calendar">`;
+      dnyTydne.forEach(d=>{calendarHtml+=`<div class="day-header">${d}</div>`;});
+      let cell = 0;
+      for(let i=0;i<weekStart;i++){ calendarHtml += `<div class="cell"></div>`; cell++;}
+      for(let den=1; den<=days; den++) {
+        calendarHtml += `<div class="cell"><div class="day-num">${den}</div>`;
+        if(data[den] && data[den].length) {
+          calendarHtml += `<div class="names-list">`;
+          data[den].forEach(abs => {
+            // OŘEZAT příznak, necháme jen jméno
+            calendarHtml += `<div class="${abs.typ.cls}">${(abs.jmeno || "").replace(/ *[|\/-].*$/,"").trim()}</div>`;
+          });
+          calendarHtml += `</div>`;
+        }
+        calendarHtml += `</div>`;
+        cell++;
+      }
+      while(cell%7!==0){calendarHtml+=`<div class="cell"></div>`; cell++;}
+      calendarHtml += `</div>`;
+      calendarArea.innerHTML = calendarHtml;
+      // Aktualizace titulku
+      let calTitle = wrap.querySelector('.calendar-title');
+      calTitle.innerText = `${mesice[month-1]} ${year.toString().slice(-2)}`;
+    }
+
+    // Tisk pouze kalendáře
+    function printKalendar(wrap) {
+      window.print();
+    }
+
+    // PDF export (převod kalendáře na obrázek a vložení do PDF)
+    function exportPDF(wrap, calTitle) {
+      import('https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js').then(html2canvas => {
+        html2canvas = html2canvas.default;
+        let area = wrap.querySelector('.print-area');
+        html2canvas(area).then(canvas => {
+          let imgData = canvas.toDataURL('image/png');
+          const pdf = new window.jspdf.jsPDF({orientation:'landscape', unit:'pt', format:'a4'});
+          let width = pdf.internal.pageSize.getWidth();
+          let height = pdf.internal.pageSize.getHeight();
+          let imgHeight = canvas.height * (width / canvas.width);
+          pdf.text(calTitle, 40, 34);
+          pdf.addImage(imgData, 'PNG', 40, 50, width-80, imgHeight-40);
+          pdf.save('kalendar-' + calTitle.replace(" ","_") + '.pdf');
+        });
+      });
+    }
+
+    // CSV parsing (najde správnou hlavičku)
+    function parseCSV(csv) {
       let delimiter = ';';
       if (csv.split(';').length < csv.split(',').length) delimiter = ',';
       let lines = csv.split(/\r?\n/).filter(r => r.trim() !== '');
-      // === Najdeme řádek s hlavní hlavičkou ("Zaměstnanec", "1", "2", ...)
       let headerIdx = lines.findIndex(r => r.split(delimiter).some(cell => cell.trim().toLowerCase().normalize("NFD").replace(/[\u0300-\u036f]/g, "").includes('zamestnanec')));
-      if (headerIdx < 0) { alert('Chyba: nenašel jsem sloupec \"Zaměstnanec\".'); return; }
+      if (headerIdx < 0) { alert('Chyba: nenašel jsem sloupec \"Zaměstnanec\".'); return {}; }
       let header = lines[headerIdx].split(delimiter);
       let jmenoIdx = header.findIndex(h => h.trim().toLowerCase().normalize("NFD").replace(/[\u0300-\u036f]/g, "").includes('zamestnanec'));
-      if (jmenoIdx === -1) { alert('Chyba: nenašel jsem sloupec se jmény.'); return; }
-      // Najdi všechny indexy sloupců s číslem dne
       let denSloupce = [];
       header.forEach((h, i) => { if (/^\d+$/.test(h.trim())) denSloupce.push(i); });
-      // Data až od dalšího řádku pod skutečnou hlavičkou
       let zamRows = lines.slice(headerIdx+1);
       let data = {};
       denSloupce.forEach((_, i) => { data[i+1] = []; });
@@ -114,29 +280,7 @@
           if (absType) data[i+1].push({ jmeno, typ: absType });
         });
       });
-      let dnyVMesici = denSloupce.length;
-      let now = new Date();
-      let month = now.getMonth()+1, year = now.getFullYear();
-      let weekStart = (new Date(year, month-1, 1).getDay() + 6) % 7;
-      let calendarHtml = `<div class="calendar">`;
-      ['Po','Út','St','Čt','Pá','So','Ne'].forEach(d=>{calendarHtml+=`<div class="day-header">${d}</div>`;});
-      let cell = 0;
-      for(let i=0;i<weekStart;i++){ calendarHtml += `<div class="cell"></div>`; cell++;}
-      for(let den=1; den<=dnyVMesici; den++) {
-        calendarHtml += `<div class="cell"><div class="day-num">${den}</div>`;
-        if(data[den].length) {
-          calendarHtml += `<div class="names-list">`;
-          data[den].forEach(abs => {
-            calendarHtml += `<div class="${abs.typ.cls}">${abs.jmeno} <span style="font-size:11px;">${abs.typ.label}</span></div>`;
-          });
-          calendarHtml += `</div>`;
-        }
-        calendarHtml += `</div>`;
-        cell++;
-      }
-      while(cell%7!==0){calendarHtml+=`<div class="cell"></div>`; cell++;}
-      calendarHtml += `</div>`;
-      document.getElementById('calendarContainer').innerHTML = calendarHtml;
+      return {data};
     }
   </script>
 </body>
