--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <img src="static/logo.png" alt="Sportisimo Logo" class="logo">
     <div class="info-box">
       <div id="datumcas"></div>
-      <tag>Vytvořil Martin Štancl</tag>
+      <i>Vytvořil Martin Štancl</i>
     </div>
   </header>
 
@@ -76,6 +76,7 @@
     <a href="bra_pc.html">Wait BRA</a>
     <a href="barcode.html">Barcode</a>
     <a href="zony.html">Zóny</a>
+    <a href="kal.html">Zóny</a>
         
   </div>
 
