--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <a href="bra_pc.html">Wait BRA</a>
     <a href="barcode.html">Barcode</a>
     <a href="zony.html">Zóny</a>
-    <a href="kal.html">Zóny</a>
+    <a href="kal.html">Kalendář</a>
         
   </div>
 
